tests/errors/lexical/invalid_char/source.wren
import "ifj25" for Ifj
class Program {
    static main() {
        var a = 10;
        var b = a + ?;
    }
}
